# fex-emu-ng

./: .gitmodules  CMakeLists.txt  Readme.md
Data/: ThunksDB.json
FEXHeaderUtils/FEXHeaderUtils/: ScopedSignalMask.h
Source/CommonCore/: HostFactory.cpp
Source/Linux/Utils/: ELFParser.h
Source/Tests/: CMakeLists.txt  ELFLoader.cpp  FEXLoader.cpp  HarnessHelpers.h  IRLoader.cpp  TestHarnessRunner.cpp
Source/Tests/LinuxSyscalls/: Syscalls.cpp  Syscalls.h  SyscallsSMCTracking.cpp  SyscallsVMATracking.cpp
Source/Tests/LinuxSyscalls/Syscalls/: Memory.cpp  Thread.cpp
Source/Tests/LinuxSyscalls/x32/: FD.cpp  Memory.cpp
Source/Tests/LinuxSyscalls/x64/: Memory.cpp
Source/Tools/FEXConfig/: Main.cpp
ThunkLibs/: README.md
ThunkLibs/Generator/: gen.cpp
ThunkLibs/Generators/: ThunkHelpers.py  libX11.py  libXext.py
ThunkLibs/GuestLibs/: CMakeLists.txt
ThunkLibs/HostLibs/: CMakeLists.txt
ThunkLibs/include/common/: CopyableFunctions.h  GeneratorInterface.h  Guest.h  Host.h
ThunkLibs/libEGL/: libEGL_Guest.cpp
ThunkLibs/libGL/: libGL_Guest.cpp  libGL_interface.cpp
ThunkLibs/libSDL2/: libSDL2_Guest.cpp
ThunkLibs/libX11/: libX11_Guest.cpp  libX11_Host.cpp
ThunkLibs/libXext/: libXext_Guest.cpp  libXext_Host.cpp
ThunkLibs/libXfixes/: libXfixes_Guest.cpp
ThunkLibs/libvulkan/: Guest.cpp  Host.cpp  libvulkan_interface.cpp
ThunkLibs/libvulkan_device/: Guest.cpp
unittests/ASM/: CMakeLists.txt
unittests/FEXLinuxTests/: CMakeLists.txt  Disabled_Tests  Known_Failures
unittests/FEXLinuxTests/tests/: CMakeLists.txt
unittests/FEXLinuxTests/tests/signal/: pthread_cancel.cpp  timer-sigev-thread.cpp
unittests/FEXLinuxTests/tests/smc/: smc-1-dynamic.cpp  smc-1-static.cpp  smc-basic-dynamic.cpp  smc-basic-static.cpp  smc-basic.inl  smc-mt-1.cpp  smc-mt-2.cpp  smc-shared-2.cpp
